--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
-  "name": "RavenApp",
-  "version": "0.0.0",
+  "name": "EasyDocsUBBApp",
+  "version": "0.0.1",
   "dependencies": {
-    "angular":          "^1.2.16",
-    "angular-route":    "^1.2.16",
+    "angular": "^1.2.16",
+    "angular-route": "^1.2.16",
     "angular-sanitize": "^1.2.16",
-    "angular-mocks":    "^1.2.16",
-    "jquery":           "^1.8.3",
-    "underscore":       "^1.6.0",
-    "restangular":      "^1.4.0"
+    "angular-mocks": "^1.2.16",
+    "jquery": "^1.8.3",
+    "underscore": "^1.6.0",
+    "restangular": "^1.4.0",
+    "bootstrap": "^3.3.7"
   },
   "analytics": false
 }
