--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "jquery": "^1.8.3",
     "underscore": "^1.6.0",
     "restangular": "^1.4.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-base64": "^2.0.5"
   },
   "analytics": false
 }
